# rtthread_fsl

./: .gitignore  README.md
bsp/imx/: readme.txt
bsp/kinetis/SDK_2.2_TWR-K64F120M/: SW-Content-Register.txt  TWR-K64F120M_manifest.xml
bsp/kinetis/SDK_2.2_TWR-K64F120M/boards/twrk64f120m/demo_apps/lwip/lwip_httpssrv_mbedTLS/bm/armgcc/: CMakeLists.txt
bsp/kinetis/SDK_2.2_TWR-K64F120M/middleware/wolfssl_3.9.8/: ChangeLogKSDK.txt
bsp/kinetis/boards/frdmkl03z/: board.h  rtconfig.h
bsp/kinetis/cmake_toolchain_files/: armgcc.cmake
bsp/kinetis/driver_wrapper/inc/: drv_lpsci.h
bsp/kinetis/driver_wrapper/lpsci/: drv_lpsci.c
bsp/kinetis/driver_wrapper/uart/: fsl_uart_irq_rt.c
bsp/kinetis/rt_app/: application.c
lib/ksdk_platform_lib/MK22F51212/KsdkPlatformLib/armgcc/: CMakeLists.txt  build_debug.bat  build_debug.sh  build_release.sh
lib/ksdk_platform_lib/MK22F51212/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MK22F51212/KsdkPlatformLib/iar/: KsdkPlatformLib_K22F51212.ewp  KsdkPlatformLib_K22F51212.eww
lib/ksdk_platform_lib/MK22F51212/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MK22F51212/KsdkPlatformLib/mdk/: KsdkPlatformLib_K22F51212.uvprojx
lib/ksdk_platform_lib/MK64F12/KsdkPlatformLib/armgcc/: CMakeLists.txt  build_all.bat  build_all.sh
lib/ksdk_platform_lib/MK64F12/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MK64F12/KsdkPlatformLib/iar/: KsdkPlatformLib_K64F12.dep  KsdkPlatformLib_K64F12.ewd  KsdkPlatformLib_K64F12.ewp  KsdkPlatformLib_K64F12.ewt  KsdkPlatformLib_K64F12.eww
lib/ksdk_platform_lib/MK64F12/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MK64F12/KsdkPlatformLib/mdk/: KsdkPlatformLib_K64F12.uvprojx
lib/ksdk_platform_lib/MKL03Z4/KsdkPlatformLib/armgcc/: CMakeLists.txt  build_all.sh
lib/ksdk_platform_lib/MKL03Z4/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKL03Z4/KsdkPlatformLib/iar/: KsdkPlatformLib_KL03Z4.ewp  KsdkPlatformLib_KL03Z4.eww
lib/ksdk_platform_lib/MKL03Z4/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKL03Z4/KsdkPlatformLib/mdk/: KsdkPlatformLib_KL03Z4.uvprojx
lib/ksdk_platform_lib/MKL25Z4/KsdkPlatformLib/armgcc/: CMakeLists.txt  build_release.bat
lib/ksdk_platform_lib/MKL25Z4/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKL25Z4/KsdkPlatformLib/iar/: KsdkPlatformLib_KL25Z4.ewp  KsdkPlatformLib_KL25Z4.eww
lib/ksdk_platform_lib/MKL25Z4/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKL25Z4/KsdkPlatformLib/mdk/: KsdkPlatformLib_KL25Z4.uvprojx
lib/ksdk_platform_lib/MKL26Z4/KsdkPlatformLib/armgcc/: CMakeLists.txt  build_all.bat
lib/ksdk_platform_lib/MKL26Z4/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKL26Z4/KsdkPlatformLib/iar/: KsdkPlatformLib_KL26Z4.ewp  KsdkPlatformLib_KL26Z4.eww
lib/ksdk_platform_lib/MKL26Z4/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKL26Z4/KsdkPlatformLib/mdk/: KsdkPlatformLib_KL26Z4.uvprojx
lib/ksdk_platform_lib/MKL27Z644/KsdkPlatformLib/armgcc/: CMakeLists.txt  build_release.bat
lib/ksdk_platform_lib/MKL27Z644/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKL27Z644/KsdkPlatformLib/iar/: KsdkPlatformLib_KL27Z644.ewp  KsdkPlatformLib_KL27Z644.eww
lib/ksdk_platform_lib/MKL27Z644/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKL27Z644/KsdkPlatformLib/mdk/: KsdkPlatformLib_KL27Z644.uvprojx
lib/ksdk_platform_lib/MKL43Z4/KsdkPlatformLib/armgcc/: CMakeLists.txt
lib/ksdk_platform_lib/MKL43Z4/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKL43Z4/KsdkPlatformLib/iar/: KsdkPlatformLib_KL43Z4.ewp  KsdkPlatformLib_KL43Z4.eww
lib/ksdk_platform_lib/MKL43Z4/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKL43Z4/KsdkPlatformLib/mdk/: KsdkPlatformLib_KL43Z4.uvprojx
lib/ksdk_platform_lib/MKL46Z4/KsdkPlatformLib/armgcc/: CMakeLists.txt
lib/ksdk_platform_lib/MKL46Z4/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKL46Z4/KsdkPlatformLib/iar/: KsdkPlatformLib_KL46Z4.ewp  KsdkPlatformLib_KL46Z4.eww
lib/ksdk_platform_lib/MKL46Z4/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKL46Z4/KsdkPlatformLib/mdk/: KsdkPlatformLib_KL46Z4.uvprojx
lib/ksdk_platform_lib/MKV31F51212/KsdkPlatformLib/armgcc/: CMakeLists.txt
lib/ksdk_platform_lib/MKV31F51212/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKV31F51212/KsdkPlatformLib/iar/: KsdkPlatformLib_KV31F51212.ewp  KsdkPlatformLib_KV31F51212.eww
lib/ksdk_platform_lib/MKV31F51212/KsdkPlatformLib/kds/: .cproject  .project
lib/ksdk_platform_lib/MKV31F51212/KsdkPlatformLib/mdk/: KsdkPlatformLib_KV31F51212.uvprojx
lib/ksdk_platform_lib/MKW24D5/KsdkPlatformLib/armgcc/: CMakeLists.txt
lib/ksdk_platform_lib/MKW24D5/KsdkPlatformLib/atl/: .cproject  .project
lib/ksdk_platform_lib/MKW24D5/KsdkPlatformLib/iar/: KsdkPlatformLib_KW24D5.ewp  KsdkPlatformLib_KW24D5.eww
lib/ksdk_platform_lib/MKW24D5/KsdkPlatformLib/kds/: .cproject  .project
pg/batches/: merged_data.yml  twrk64f120m.rb  unified_data.yml
pg/records/: globals.yml  tool_chains.yml
pg/records/applications/: apps.yml
pg/records/applications/common/: hello_world.yml
pg/records/component/: mbed_m4_component.yml
pg/records/component/nxp/: mbed_fsl_component.yml
pg/records/component/rt_thread/: driver_wrapper.yml  finish.yml  libcpu_arm.yml  libcpu_cortex-m0plus.yml  libcpu_cortex-m4.yml  rt_core.yml  rt_drivers.yml
pg/records/mbed/: mbed.yml  mbed_cortexm.yml  mbed_fsl.yml  mbed_m4.yml
pg/records/projects/nxp/: twrk64f120m.yml
pg/records/rt_thread/: driver_wrapper.yml  finish.yml  rt_core.yml  rt_drivers.yml
pg/records/rt_thread/driver_wrapper/: rt_lpsci.yml  rt_lpuart.yml  rt_uart.yml
pg/records/rt_thread/libcpu/: arm.yml  cortex-m0plus.yml  cortex-m4.yml
pg/templates/iar/: general.ewp  general.eww
pg/templates/mdk/: k64f120m.uvprojx  project_projx.xsd
pg/utils/: MK64FN1M0xxx12.yml  gen_component.rb  stm32f0xxx.yml
(+2373 files in other folders)
